[gd_scene load_steps=2 format=3 uid="uid://bc3b8ju2qowd2"]

[ext_resource type="Script" path="res://scenes/day_night_cycle.gd" id="1_wxccp"]

[node name="dayNightCycle" type="Node2D"]
script = ExtResource("1_wxccp")

[node name="DayOrNight" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
text = "Day"

[node name="NumberOfDays" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 46.0
offset_right = 86.0
offset_bottom = 23.0
text = "1"

[node name="Hour" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 83.0
offset_right = 123.0
offset_bottom = 23.0
text = "00"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
